<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/nav_cinemas"
        android:title="@string/nav_cinemas"
        android:icon="@drawable/ic_movie"/>

    <item android:id="@+id/nav_favorites"
        android:title="@string/nav_favorites"
        android:icon="@drawable/ic_star"/>

    <item android:id="@+id/nav_preference"
        android:title="@string/nav_preference"
        android:icon="@drawable/ic_mood"/>

    <item android:title="@string/nav_perfil">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_logout"/>
        </menu>
    </item>


</menu>